:space_invader: testing jekyll icons folder

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,6 +6,11 @@ defaults:
       path: ""
     values:
       layout: default
+  -
+    scope:
+      path: "icons"
+    values:
+      icon: true
 
 collections:
   sections:
